# tarir

./: .gitignore  CREDITS.md  Cargo.toml  README.md
src/: dat_decompress.rs  dat_parser.rs  main.rs  mainbak  pf_parser.rs  texture_decompress.rs
tarir/templates/: data_view_file_id.html  index.html
templates/: data_view.html  data_view_base_id.html
