[package]
name = "tarir"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
byteorder = "1.5.0"
crc32c = "0.6.8"
dds-rs = "0.7.0"
image = "0.25.5"
rodio = { version = "0.20.1", features = ["symphonia-all"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tera = "1.20.0"
uuid = { version = "1.11.0", features = ["v4"] }
